/*
 * $Id: ChangeLog,v 1.3836 2005/02/17 19:52:11 druzus Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2005-02-17 16:55 UTC-0600 Vicente Guerra <vicente@guerra.com.mx>
  * source/odbc/odbc.c
    ! Fixed memory leaks on SQLGetData().

2005-02-17 20:45 UTC+0100 Przemyslaw Czerpak (druzus/at/priv.onet.pl)
  * xharbour/config/w32/global.cf
    * hacked to work from cmd.exe/command.com when GNU make detects
      shell like environment - I do not know how to disable this
      make feature - it was modified and the documentation not updated.

  * xharbour/config/w32/xcc.cf
    * small modification for command.com

2005-02-16 11:15 UTC-0600 Vicente Guerra <vicente@guerra.com.mx>
  * source/rtl/teditor.prg
    ! Fixed detection of EOL at the end of the text to edit.

2005-02-17 19:15 UTC+0700 Andi Jahja <xharbour@cbn.net.id>
  * makefile.gc
  * make_gc.bat
    * remove spurious OBJ_DIR macros
    * formatting

  * utils/hbdoc/hbdoc.prg
    * copyright year: 2004 -> 2005
    * print help message to std output device

  * utils/hbrun/hbrun.prg
    * copyright year: 2000 -> 2005
    * add http://www.xHarbour.org to Copyright Notice

  * utils/hbmake/hbmake.prg
    * print help message to std output device
    * copyright year: 2004 -> 2005

  * utils/hbtest/hbtest.prg
    * copyright year: 2000 -> 2005
    * add http://www.xHarbour.org to Copyright Notice

2005-02-17 15:03 UTC+0300 Phil Krylov <phil a t newstar.rinet.ru>
  * source/vm/hvm.c
    * Cache __DBGENTRY() symbol to improve the speed of programs built
      with debug info.

2005-02-17 15:00 UTC+0700 Andi Jahja <xharbour@cbn.net.id>
  + makefile.gc
  + make_gc.bat
    * another approach of building xHarbour with MinGW under Windows

    /*
    Note: Initial upload, only for ST. Modification for MT is appreciated.
    */
