@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.3836 2005/02/17 19:52:11 druzus Exp $
+ * $Id: ChangeLog,v 1.3838 2005/02/18 20:00:00 ptsarenko Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,12 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2005-02-18 20:00 UTC+0200 Pavel Tsarenko <tpe2@mail.ru>
+  * source/ct/blank.prg
+    * added blank for memo field
+  * source/ct/tab.c
+    ! fixed TAB*() for empty string
 
 2005-02-17 16:55 UTC-0600 Vicente Guerra <vicente@guerra.com.mx>
   * source/odbc/odbc.c
